kubernetes/engram/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engram-cloud
  namespace: mcps
spec:
  type: ClusterIP
  selector:
    app: engram-cloud
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
